Version 1.2
===========

New features
------------

- Basic support for guitar chords: major and minor, augmented and diminished,
  sevens (with forementioned only), suspended (2nd and 4th) and power (perfect
  fifth).

- Meters 2/2 and 4/4 are replaced with traditional C symbols.

- Basic tuplets (triplets and duplets) are supported in standard situations.

Bugs fixed
----------

- Better default page layout handling.

- Repeats at the very beginning and the very end of piece are handled correctly.

- Fixed handling of unsupported features with multiple staves.

Version 1.1
===========

New features
------------

- Accidentals: sharp, double sharp, natural, flat, double flat.

- Chord (non-spacing) notes.

- 32nd notes and rests are now supported.

- Articulations: accent, staccato and fermata.

- Multiple measures lasting rests are now supported.

Bugs fixed
----------

- Better bar lines processing. Left and right bar lines from XML are
  merged to catch both voltas and repeats.

- Measures longer than whole note (like 12/8) are now supported.

- PHP 5.5+ is supported (Generator is now language internal class)

- Better processing of some unsupported features.

- Function for numbering slurs/ties now works with multiple stuffs.

- Spacing for pointed whole note fixed (MusiXTeX has no such spacing,
  so version for regular whole note is used).

- Voltas different from single digit are supported.
