@@ -12,9 +12,13 @@
 \def\cap#1{\pt{#1}\ca{#1}}
 \def\qap#1{\pt{#1}\qa{#1}}
 \def\hap#1{\pt{#1}\ha{#1}}
+\def\wqp#1{\pt{#1}\wq{#1}}
+\def\wqqp#1{\pt{#1}\wqq{#1}}
 \def\zqp#1{\pt{#1}\zq{#1}}
 \def\zhp#1{\pt{#1}\zh{#1}}
 \def\zwhp#1{\pt{#1}\zwh{#1}}
+\def\zwqp#1{\pt{#1}\zwq{#1}}
+\def\zwqqp#1{\pt{#1}\zwqq{#1}}
 \def\zqbp#1#2{\pt{#2}\zqb{#1}{#2}}
 \def\qpp{\pt 4\qp} % don't move with \transpose
 \def\nr#1{\zcharnote{8}{\lower-1pt\vbox{\eightbf#1}}}
