@@ -7,45 +7,57 @@
 		private $pitches = array();
 
 		protected $notes = array(
-				1  => '\notes',
-				2  => '\notes',
-				3  => '\notesp',
-				4  => '\Notes',
-				6  => '\Notesp',
-				8  => '\NOtes',
-				12 => '\NOtesp',
-				16 => '\NOTes',
-				24 => '\NOTesp',
-				32 => '\NOTEs',
-				48 => '\NOTEs',
+				1   => '\notes',
+				2   => '\notes',
+				3   => '\notesp',
+				4   => '\Notes',
+				6   => '\Notesp',
+				8   => '\NOtes',
+				12  => '\NOtesp',
+				16  => '\NOTes',
+				24  => '\NOTesp',
+				32  => '\NOTEs',
+				48  => '\NOTEs',
+				64  => '\NOTEs',
+				96  => '\NOTEs',
+				128 => '\NOTEs',
+				192 => '\NOTEs',
 			);
 
 		protected $note = array(
-				1  => '\ccca',
-				2  => '\cca',
-				3  => '\ccap',
-				4  => '\ca',
-				6  => '\cap',
-				8  => '\qa',
-				12 => '\qap',
-				16 => '\ha',
-				24 => '\hap',
-				32 => '\wh',
-				48 => '\whp',
+				1   => '\ccca',
+				2   => '\cca',
+				3   => '\ccap',
+				4   => '\ca',
+				6   => '\cap',
+				8   => '\qa',
+				12  => '\qap',
+				16  => '\ha',
+				24  => '\hap',
+				32  => '\wh',
+				48  => '\whp',
+				64  => '\wq',
+				96  => '\wqp',
+				128 => '\wqq',
+				192 => '\wqqp',
 			);
 
 		protected $znote = array(
-				1  => '\zq',
-				2  => '\zq',
-				3  => '\zqp',
-				4  => '\zq',
-				6  => '\zqp',
-				8  => '\zq',
-				12 => '\zqp',
-				16 => '\zh',
-				24 => '\zhp',
-				32 => '\zwh',
-				48 => '\zwhp',
+				1   => '\zq',
+				2   => '\zq',
+				3   => '\zqp',
+				4   => '\zq',
+				6   => '\zqp',
+				8   => '\zq',
+				12  => '\zqp',
+				16  => '\zh',
+				24  => '\zhp',
+				32  => '\zwh',
+				48  => '\zwhp',
+				64  => '\zwq',
+				96  => '\zwqp',
+				128 => '\zwqq',
+				192 => '\zwqqp',
 			);
 
 		protected $pause = array(
